--- a/.env.master
+++ b/.env.master
@@ -353,6 +353,10 @@ DB_POOL_SIZE=20
 DB_MAX_OVERFLOW=40
 DB_POOL_TIMEOUT=30
 
+# DockerHub
+docker login -u mwwoodworth
+dckr_pat_iI44t5EXTpawhU8Rwnc91ETcZho
+
 # Redis Pool
 REDIS_POOL_SIZE=10
 REDIS_MAX_CONNECTIONS=50
